--- a/eisis.css
+++ b/eisis.css
@@ -1,7 +1,7 @@
 /* CSS declarations go here */
 body{
 	font-family: Calibri;
-	background-color: #E2EfA6;
+	background-color: #96E6F5;
 }
 h1 {
 	color:#116075;
